[package]
name = "mtpng"
version = "0.4.1"
authors = ["Brooke Vibber <bvibber@pobox.com>"]
license = "MIT"
description = "Multithreaded PNG encoder library"
readme = "readme.md"
homepage = "https://github.com/bvibber/mtpng"
repository = "https://github.com/bvibber/mtpng.git"
keywords = ["png", "multithreaded", "threaded", "parallel"]
categories = ["multimedia::images"]

[features]

# match upstream defaults: system zlib + table-based crc. opt into the
# alternatives explicitly so this fork stays a strict superset
default=["zlib"]

# use libz-sys (system zlib, C). default-on for upstream parity
zlib=["dep:libz-sys"]

# use libz-rs-sys (zlib-rs, pure-Rust zlib API). ~2-2.5x faster and
# memory-safe. when both `zlib` and `zlib-rs` are enabled, `zlib-rs`
# wins in source. adapted from upstream PR #29 (Shnatsel)
zlib-rs=["dep:libz-rs-sys"]

# use crc32fast for PNG chunk CRCs. uses PCLMULQDQ/SSE4.2 on x86_64,
# ~5-10x faster than the table-based `crc` crate. produces the same
# CRC-32 bytes. adapted from upstream PR #16 (JasperDeSutter)
crc32fast=["dep:crc32fast"]

# include command-line tool
cli=["png", "clap", "time"]

# include C symbol exports
capi=["libc"]

[[bin]]
name="mtpng"
path="src/bin/mtpng.rs"
required-features=["cli"]

[dependencies]
rayon = "1.5.0"
crc = "1.8.1"
itertools = "0.10.0"

# implied deps for cli
png = { version = "0.17.5", optional = true }
clap = { version = "3.1.12", optional = true }
time = { version = "0.3.9", optional = true }

# implied deps for capi
libc = { version = "0.2.43", optional = true }

# feature-gated optimizations (see [features] above)
libz-sys = { version = "1.0.23", optional = true }
libz-rs-sys = { version = "0.4", optional = true }
crc32fast = { version = "1.5", optional = true }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[profile.release]
## Unoptimized debug builds are too slow to profile!
## Having debug info doesn't hurt perf but does increase
## size, so enable this if needed.
# debug = true
